# rift

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/src/: main.py
backend/src/adapters/code_hosts/: base.py  github.py  gitlab.py
backend/src/adapters/mongo/: base_repository.py  batch_change_repo.py  batch_run_repo.py  batch_spec_repo.py  changeset_event_repo.py  changeset_repo.py  changeset_spec_repo.py  client.py  user_repo.py  workspace_execution_repo.py
backend/src/adapters/object_store/: s3_adapter.py
backend/src/adapters/redis/: client.py
backend/src/api/: dependencies.py
backend/src/core/: config.py  encryption.py  errors.py  logging.py
backend/src/models/: analytics.py  audit.py  batch_change.py  batch_spec.py  changeset.py  changeset_spec.py  code_host.py  common.py  credential.py  execution.py  namespace.py  organization.py  repository.py  template.py  user.py
backend/src/services/: analytics_service.py  audit_service.py  auth_service.py  batch_change_service.py  bootstrap_service.py  changeset_controller.py  credential_service.py  execution_orchestrator.py  reconciliation_service.py  template_service.py
backend/src/workflows/: apply_workflow.py  preview_workflow.py  worker.py
backend/tests/functional/: __init__.py  test_auth_journeys.py
backend/tests/integration/: conftest.py  test_auth_routes.py  test_bootstrap_auth.py  test_s3_adapter.py
backend/tests/unit/: test_auth_service.py  test_bootstrap_service.py  test_models.py
(+163 files in other folders)
